revised swagger patch and delete
